5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4135/executions/1593_2043.log
== SUBMITION (2019-03-26 11:09:33) 
-- CODE:
nota1 = float (input ("Digite a nota 1:"))
nota2 = float (input ("Digite a nota 2:"))
nota3 = float (input ("Digite a nota 3:"))
nota4 = float (input ("Digite a nota 4:"))
media = ((nota)+(2*nota2)+(3*nota3)+(4*nota4))/4
print (round(media,2))
-- EXECUTION TIME:
0.182622
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2043/main.py", line 5, in <module>
    media = ((nota)+(2*nota2)+(3*nota3)+(4*nota4))/4
NameError: name 'nota' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:10:16) 
-- CODE:
nota1 = float (input ("Digite a nota 1:"))
nota2 = float (input ("Digite a nota 2:"))
nota3 = float (input ("Digite a nota 3:"))
nota4 = float (input ("Digite a nota 4:"))
media = ((nota)+(2*nota2)+(3*nota3)+(4*nota4))/4
print (round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    media = ((nota)+(2*nota2)+(3*nota3)+(4*nota4))/4
NameError: name 'nota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:10:52) 
-- CODE:
nota1 = float (input ("Digite a nota 1:"))
nota2 = float (input ("Digite a nota 2:"))
nota3 = float (input ("Digite a nota 3:"))
nota4 = float (input ("Digite a nota 4:"))
media = ((nota)+(2*nota2)+(3*nota3)+(4*nota4))
print (round(media,2))
-- EXECUTION TIME:
0.128365
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1593/2043/main.py", line 5, in <module>
    media = ((nota)+(2*nota2)+(3*nota3)+(4*nota4))
NameError: name 'nota' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:13:22) 
-- CODE:
n1 = float (input ("Digite a nota 1:"))
n2 = float (input ("Digite a nota 2:"))
n3 = float (input ("Digite a nota 3:"))
n4 = float (input ("Digite a nota 4:"))
media = (n1+2*n2+3*n3+4*n4)/10
print (round(media,2))
-- EXECUTION TIME:
0.145021
-- TEST CASE 1:
---- input:
8
8.5
7
9
---- correct output:
8.2
---- user output:
8.2
-- TEST CASE 2:
---- input:
7
7
7
7
---- correct output:
7.0
---- user output:
7.0
-- TEST CASE 3:
---- input:
5.75
6.9
7.95
8.99
---- correct output:
7.94
---- user output:
7.94
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
